<resources>
    <string name="app_name">News Zupper Catalisa</string>
    <string name="login">Login!</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="criar_nova_conta">Criar Nova Conta</string>
    <string name="action_sign_in">Entrar</string>
    <string name="register_name">Informe o seu nome</string>
    <string name="register_email">Informe seu e-mail</string>
    <string name="register_password">Informe sua senha</string>
    <string name="register_now">Cadastrar Agora</string>
    <string name="hello_thay">Hello Thay</string>
    <string name="news_day">As noticías de hoje são:</string>
    <string name="exit">Sair</string>
    <string name="title_news">Titulo da noticia</string>
    <string name="detail_news">Detalhe das noticias</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_ic_favorite">icone em formato de coração preto</string>
    <string name="favorite">Favoritos</string>
    <string name="news_catalisa">News Catalisa</string>
    <string name="Add">Cadastro</string>
    <string name="mensagem_token">Mensagem</string>
    <string name="test_token">Teste Token</string>
    <string name="last_notification">Last title Notification</string>
    <string name="notification">Notificação</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
    </string-array>
</resources>