<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="br.com.zup.authentication.presentation.login.fragmentview.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_registerFragment2"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_newsFragment"
            app:destination="@id/newsFragment" />
        <action
            android:id="@+id/action_loginFragment_to_notificationFragment"
            app:destination="@id/notificationFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="br.com.zup.authentication.presentation.register.registerview.RegisterFragment"
        android:label="@string/Add"
        tools:layout="@layout/fragment_register" />
    <fragment
        android:id="@+id/newsFragment"
        android:name="br.com.zup.authentication.presentation.news.fragmentview.NewsFragment"
        android:label="@string/news_catalisa"
        tools:layout="@layout/fragment_news" >
        <action
            android:id="@+id/action_newsFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_newsFragment_to_newsFavoriteFragment"
            app:destination="@id/newsFavoriteFragment" />
    </fragment>
    <fragment
        android:id="@+id/newsFavoriteFragment"
        android:name="br.com.zup.authentication.presentation.newsfavorite.view.NewsFavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_news_favorite" />
    <fragment
        android:id="@+id/notificationFragment"
        android:name="br.com.zup.authentication.presentation.notification.fragmentview.NotificationFragment"
        android:label="fragment_notification"
        tools:layout="@layout/fragment_notification" />
</navigation>